--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,42 +1,72 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <div class="dropdown">
-                    <li class="nav-item dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </div>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-    </div>
-</nav>
+<mat-toolbar color="basic">
+  <mat-toolbar-row>
+    <span>Ticket App By Breuer</span>
+    <span class="spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>settings</mat-icon>
+        <span>Settings</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>notifications_off</mat-icon>
+        <span>Disable alerts</span>
+      </button>
+    </mat-menu>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+
+<mat-sidenav-container class="example-container">
+
+
+
+  <mat-sidenav opened mode="side">
+
+
+        <mat-form-field appearance="outline" class="searchbar">
+          <mat-label class="label-search">
+            Search
+          </mat-label>
+          <div class="items-search">
+            <input class="input-search" matInput>
+            <button class="button-search" mat-mini-fab color="basic" aria-label="Example icon button with a menu icon">
+              <mat-icon>search</mat-icon>
+            </button>
+          </div>
+        </mat-form-field>
+      <mat-divider></mat-divider>
+        <mat-tab-group>
+          <mat-tab label="History">
+            <mat-selection-list #tickets>
+              <mat-action-list></mat-action-list>
+              @for (ticket of ticketsViewed; track ticket){
+
+              <mat-list-item><a> {{ticket}} </a></mat-list-item>
+              <mat-divider></mat-divider>
+              }
+
+            </mat-selection-list>
+
+          </mat-tab>
+          <mat-tab label="New"> Content 2 </mat-tab>
+        </mat-tab-group>
+
+
+
+  </mat-sidenav>
+  <div>
+    <ng-container *ngIf="currentPage === 'dashboard'">
+    <ng-container *ngTemplateOutlet="dashboardComponent"> </ng-container>
+    </ng-container>
+  </div>
+  <ng-template #dashboardComponent>
+    <app-dashboard></app-dashboard>
+  </ng-template>
+</mat-sidenav-container>
