--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
 <mat-grid-list cols="1" rowHeight="7:1">
     <mat-grid-tile>
         <button mat-fab extended color="basic">
-            <p>All tickets</p>
-            <mat-selection-list #tickets>
-                <mat-action-list></mat-action-list>
-            </mat-selection-list>
+            <a href="http://www.">All tickets</a>
+  
         </button>
     </mat-grid-tile>
     <mat-grid-tile>
         <button mat-fab extended color="basic">
-            <p>Unassinged Tickets</p>
+            <a>Unassinged Tickets</a>
 
         </button>
     </mat-grid-tile>
