--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,17 +2,23 @@
   <mat-toolbar-row>
     <span>Ticket App By Breuer</span>
     <span class="spacer"></span>
-     <button mat-icon-button aria-label="news icon button">
+    <button mat-icon-button aria-label="news icon button">
       <mat-icon>notifications</mat-icon>
     </button>
-    <button mat-icon-button aria-label="dashboard icon button">
+
+    <button mat-icon-button routerLink="/ticket-create" aria-label="plus icon button">
+      <mat-icon>create</mat-icon>
+    </button>
+
+    <button mat-icon-button routerLink="/dashboard" aria-label="dashboard icon button">
       <mat-icon>dashboard</mat-icon>
     </button>
+
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-   <button mat-menu-item>
+      <button mat-menu-item>
         <mat-icon>notifications_off</mat-icon>
         <span>Disable alerts</span>
       </button>
@@ -21,8 +27,8 @@
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
       </button>
-   
-      
+
+
       <button mat-menu-item>
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
@@ -53,11 +59,11 @@
     <mat-divider></mat-divider>
     <mat-tab-group color="accent">
       <mat-tab label="History">
-        <mat-selection-list #tickets>
+        <mat-selection-list #ticket>
           <mat-action-list></mat-action-list>
-          @for (ticket of ticketsViewed; track ticket){
+          @for (ticket of tickets; track ticket.id){
 
-          <mat-list-item><a> {{ticket}} </a></mat-list-item>
+          <mat-list-item routerLink="/ticket/{{ticket.id}}"><a> {{ticket.title}} </a></mat-list-item>
           <mat-divider></mat-divider>
           }
 
