--- a/src/app/ticket-overview/ticket-overview.component.html
+++ b/src/app/ticket-overview/ticket-overview.component.html
@@ -10,19 +10,24 @@
     <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
         <td mat-cell *matCellDef="let element">
-            <button mat-button color="accent">{{element.title}}</button>
+            <button mat-button routerLink="/ticket/{{element.id}}" color="accent">{{element.title}}</button>
         </td>
     </ng-container>
 
+<ng-container matColumnDef="owner">
+        <th mat-header-cell *matHeaderCellDef>Owner</th>
+        <td mat-cell *matCellDef="let element">
+        {{element.owner}}
+        </td>
+    </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="updated">
         <th mat-header-cell *matHeaderCellDef> Updated </th>
         <td mat-cell *matCellDef="let element">
             {{element.updated}}
         </td>
     </ng-container>
-    <!-- Weight Column -->
+
     <ng-container matColumnDef="created">
         <th mat-header-cell *matHeaderCellDef> Created </th>
         <td mat-cell *matCellDef="let element">
@@ -30,7 +35,6 @@
         </td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
         <td mat-cell *matCellDef="let element">
