--- a/src/app/ticket-overview/ticket-overview.component.html
+++ b/src/app/ticket-overview/ticket-overview.component.html
@@ -17,21 +17,21 @@
 <ng-container matColumnDef="owner">
         <th mat-header-cell *matHeaderCellDef>Owner</th>
         <td mat-cell *matCellDef="let element">
-        {{element.owner}}
+            {{getOwnerName(element.owner)}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="updated">
         <th mat-header-cell *matHeaderCellDef> Updated </th>
         <td mat-cell *matCellDef="let element">
-            {{element.updated}}
+            {{element.lastChangedDateTime | date: 'dd/mm/yyyy'}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="created">
         <th mat-header-cell *matHeaderCellDef> Created </th>
         <td mat-cell *matCellDef="let element">
-            {{element.created}}
+            {{element.createDateTime | date: 'dd/mm/yyyy'}}
         </td>
     </ng-container>
 
