--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header-toolbar" color="basic">
   <mat-toolbar-row>
-    <span>Ticket App By Breuer</span>
+    <span>Ticket Tacos App </span>
     <span class="spacer"></span>
     <button mat-icon-button aria-label="news icon button">
       <mat-icon>notifications</mat-icon>
