git ticket by id

--- a/src/app/ticket-view/ticket-view.component.html
+++ b/src/app/ticket-view/ticket-view.component.html
@@ -1,6 +1,6 @@
-@if(true){
-
-<!-- <h2>Ticket Details</h2>
+@if(ticket){
+<!-- 
+<h2>Ticket Details</h2>
     <p><strong>ID:</strong> {{ ticket.id }}</p>
     <p><strong>Title:</strong> {{ ticket.title }}</p>
     <p><strong>Description:</strong> {{ ticket.description }}</p> -->
@@ -9,14 +9,14 @@
     <mat-card-header>
         <mat-card-title>
             <!-- TODO check for http request data -->
-            <!-- {{ticket.title}} -->
+            {{ticket.title}}
             <mat-icon color="accent">label_important</mat-icon>
-            <!-- {{ticket.status}} -->
+            {{ticket.status}}
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <p>
-            <!-- {{ticket.description}} -->
+            {{ticket.description}}
         </p>
     </mat-card-content>
     <mat-divider></mat-divider>
@@ -29,5 +29,6 @@
 
 }
 @else {
+
 <p>couldnt find </p>
 }
