--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <button mat-fab routerLink="/ticket-unassigned" extended color="basic">
-            <a>Unassinged Tickets</a>
+            <p>Unassinged Tickets</p>
 
         </button>
     </mat-grid-tile>
