--- a/src/app/ticket-create/ticket-create.component.html
+++ b/src/app/ticket-create/ticket-create.component.html
@@ -1,13 +1,25 @@
-<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
+<mat-stepper orientation="vertical" #stepper>
   <mat-step [stepControl]="form">
     <form class="ticket-form" [formGroup]="form">
       <ng-template matStepLabel>Fill out your name</ng-template>
       <div>
-      
         <mat-form-field>
-          <mat-label>You name</mat-label>
-          <input class="full-width" matInput playholder="Your name" formControlName="userCtrl" required>
+          <mat-label>User</mat-label>
+          <input matInput aria-label="User" [matAutocomplete]="auto" [formControl]="userCtrl"
+            formControlName="userCtrlName">
+          <mat-autocomplete #auto="matAutocomplete">
+
+            @for (user of filteredUsers | async; track user) {
+            <mat-option [value]="user.lastname">
+              <!--  TODO icon for user -->
+
+              <span>{{user.firstname}} {{user.lastname}}</span>
+
+            </mat-option>
+            }
+          </mat-autocomplete>
         </mat-form-field>
+
       </div>
       <div>
         <button color="accent" mat-button matStepperNext>Next</button>
@@ -17,14 +29,14 @@
   <mat-step [stepControl]="form" label="How can we help you?">
     <form class="ticket-form" [formGroup]="form">
       <div>
-        <mat-form-field>
+        <mat-form-field class="full-width">
           <mat-label>Title</mat-label>
-          <input class="full-width" matInput formControlName="titleCtrl" placeholder="Title" required>
+          <input matInput formControlName="titleCtrl" placeholder="Title" required>
         </mat-form-field>
       </div>
-      <mat-form-field>
+      <mat-form-field class="full-width">
         <mat-label>Description</mat-label>
-        <textarea class="full-width" matInput formControlName="descriptionCtrl" placeholder="How can we help you?"
+        <textarea class="full-width" matInput formControlName="descriptionCtrl" rows="5" placeholder="How can we help you?"
           required></textarea>
       </mat-form-field>
 
