--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -71,17 +71,7 @@
       </mat-tab>
       <mat-tab label="New">
         <mat-action-list></mat-action-list>
-        <div *ngIf="isLoading; else newContent">
-          <mat-spinner></mat-spinner>
-        </div>
-        <ng-template #newContent>
-          @for (ticket of ticketsNew; track ticket.getId){
-
-          {{ticket.getCreatedBy}}
-          <mat-list-item routerLink="/ticket/{{ticket.getId}}"><a> {{ticket.getTitle}} </a></mat-list-item>
-          <mat-divider></mat-divider>
-          }
-        </ng-template>
+        <app-ticket-new-list></app-ticket-new-list>
       </mat-tab>
     </mat-tab-group>
 
