changed the login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,11 +1,17 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <mat-label>Username</mat-label>
-    <input matInput placeholder="Username" value="Username">
-  </mat-form-field>
+<div class="container-login">
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Username</mat-label>
+      <input matInput placeholder="Username" value="Username" />
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Password</mat-label>
-    <input matInput placeholder="Password">
-  </mat-form-field>
-</form>
+    <mat-form-field class="example-full-width">
+      <mat-label>Password</mat-label>
+      <input matInput placeholder="Password" value="Password" />
+    </mat-form-field>
+    <div class="buttons-login">
+      <button mat-flat-button color="accent">Login</button>
+      <button mat-flat-button>Sign Up</button>
+    </div>
+  </form>
+</div>
