--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="container-login">
-  <form class="example-form">
+  <form class="login-form" [formGroup]="form">
     <mat-form-field class="example-full-width">
       <mat-label>Username</mat-label>
-      <input matInput placeholder="Username" value="Username" />
+      <input matInput placeholder="Username" value="Username" formControlName="emailCtrl"/>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
       <mat-label>Password</mat-label>
-      <input matInput placeholder="Password" value="Password" />
+      <input matInput type="password" placeholder="Password" value="Password" formControlName="passwordCtrl"/>
     </mat-form-field>
     <div class="buttons-login">
-      <button mat-flat-button color="accent">Login</button>
+      <button mat-flat-button color="accent" (click)="onSubmit()">Login</button>
       <button mat-flat-button>Sign Up</button>
     </div>
   </form>
