--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,19 +2,38 @@
   <mat-toolbar-row>
     <span>Ticket Tacos App </span>
     <span class="spacer"></span>
+
+    @if (isLoggedIn){
+    <button mat-icon-button aria-label="user icon button">
+      <mat-icon>user</mat-icon> {{ username }}
+    </button>
+    }
+
     <button mat-icon-button aria-label="news icon button">
       <mat-icon>notifications</mat-icon>
     </button>
 
-    <button mat-icon-button routerLink="/ticket-create" aria-label="plus icon button">
+    <button
+      mat-icon-button
+      routerLink="/ticket-create"
+      aria-label="plus icon button"
+    >
       <mat-icon>create</mat-icon>
     </button>
 
-    <button mat-icon-button routerLink="/dashboard" aria-label="dashboard icon button">
+    <button
+      mat-icon-button
+      routerLink="/dashboard"
+      aria-label="dashboard icon button"
+    >
       <mat-icon>dashboard</mat-icon>
     </button>
 
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+    <button
+      mat-icon-button
+      [matMenuTriggerFor]="menu"
+      aria-label="Example icon-button with a menu"
+    >
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
@@ -28,7 +47,6 @@
         <span>Settings</span>
       </button>
 
-
       <button mat-menu-item>
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
@@ -37,21 +55,18 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-
 <mat-sidenav-container class="example-container">
-
-
-
   <mat-sidenav opened mode="side">
-
-
     <mat-form-field appearance="outline" class="searchbar">
-      <mat-label class="label-search">
-        Search
-      </mat-label>
+      <mat-label class="label-search"> Search </mat-label>
       <div class="items-search">
-        <input class="input-search" matInput>
-        <button class="button-search" mat-mini-fab color="basic" aria-label="Example icon button with a menu icon">
+        <input class="input-search" matInput />
+        <button
+          class="button-search"
+          mat-mini-fab
+          color="basic"
+          aria-label="Example icon button with a menu icon"
+        >
           <mat-icon>search</mat-icon>
         </button>
       </div>
@@ -64,7 +79,9 @@
           <mat-action-list></mat-action-list>
           @for (ticket of tickets; track ticket.getId){
 
-          <mat-list-item routerLink="/ticket/{{ticket.getId}}"><a> {{ticket.getTitle}} </a></mat-list-item>
+          <mat-list-item routerLink="/ticket/{{ ticket.getId }}"
+            ><a> {{ ticket.getTitle }} </a></mat-list-item
+          >
           <mat-divider></mat-divider>
           }
         </mat-selection-list>
@@ -74,13 +91,7 @@
         <app-ticket-new-list></app-ticket-new-list>
       </mat-tab>
     </mat-tab-group>
-
-
-
   </mat-sidenav>
 
-
   <router-outlet></router-outlet>
-
-
 </mat-sidenav-container>
