--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,11 +1,11 @@
-body{
-    background-color: black;
-}
-.mat-grid-tile{
-    background-color: black;
-    border: black;
+// body{
+//     background-color: black;
+// }
+// .mat-grid-tile{
+//     background-color: black;
+//     border: black;
 
-}
+// }
 button{
     height: 100%;
     width: 100%;
@@ -15,5 +15,12 @@ button{
     border-radius: 0;
     padding: 5%;
     font-size: 1.5rem;
+
+}
+
+mat-card{
+    margin: auto;
+    width: 100%;
+    height: 100%;
 
 }
